syntax = "proto3";

option csharp_namespace = "UhlnocsClient";

package calculationProto;

service CalculationServiceProto {
  rpc EnhanceLaunchConfiguration(LaunchConfigurationMessage) returns (LaunchConfigurationMessage);

  rpc StartLaunch (LaunchConfigurationMessage) returns (LaunchIdMessage);

  rpc RecalculateModelPerformance (ModelIdMessage) returns (CalculationEmptyMessage);

  rpc GetLaunchesInfos (LaunchesFiltersRequest) returns (LaunchesInfosReply);

  rpc GetLaunchResult (LaunchIdMessage) returns (LaunchResultReply);
}

message CalculationEmptyMessage {

}

message LaunchConfigurationMessage {
    string launchConfigurationJson = 1;
}

message LaunchIdMessage {
    string launchId = 1;
}

message ModelIdMessage {
    string modelId = 1;
}

message LaunchesFiltersRequest {
    string launchesFiltersJson = 1;
}

message LaunchesInfosReply {
    int32 launchesTotal = 1;
    int32 pagesTotal = 2;
    string launchesInfosJson = 3;
}

message LaunchResultReply {
    string LaunchResultJson = 1;
}